# bluetooth-heart-rate-client-pico-w

./: CMakeLists.txt  ble_heart_rate_client.c  main.c
bluetooth/: ble_client.h
